tests/negative_tests/syntax_errors/while_no_condition.c
// INVALID - Syntax Error: while needs condition
int main() {
    while () {  // ERROR: missing condition
        break;
    }
    return 0;
}
